add reject file req

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <span> Designer</span>
                 </li>
                 <li>
-                    <img src="./images/team-3.jpg" width="264" />
+                    <img src="./images/team-3.png" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
